<resources>

    // app
    <string name="app_name">HybridCleanerAndroid</string>
    <string name="preference_ble">HybridCleanerAndroidBle</string>
    <string name="text_splash_copyright">Copyright ©  Co., Ltd. All rights reserved.</string>

    // main
    <string name="title_tab_main_remote">리모컨</string>
    <string name="title_tab_main_diagnosis">센서진단</string>
    <string name="title_tab_main_battery">배터리</string>
    <string name="title_tab_main_cs">고객센터</string>
    <string name="text_main_snackbar_invaliddevice">연결에 실패하였습니다 - 잘못된 기기 연결 시도</string>
    <string name="text_main_snackbar_bluetoothnotavailable">해당 기기는 블루투스 연결이 불가능 합니다.</string>
    <string name="text_main_error_message">오류가 발생하였습니다. 전원을 끄고 재기동 하거나 지속적으로 해당 문제가 발생하는 경우 고객센터에 문의해 주시기 바랍니다.</string>
    <string name="text_main_snackbar_error_ignore">\'무시하기\'를 선택하였습니다. 문제있는 경우 꼭 AS센터로 문의해 주세요.</string>
    
    // drawer
    <string name="title_drawer_login">로그인</string>
    <string name="title_drawer_announcement">공지사항</string>
    <string name="title_drawer_appversion">버전 정보</string>
    <string name="title_drawer_usermanual">사용자 메뉴얼</string>
    <string name="title_drawer_website">홈페이지</string>
    <string name="title_drawer_productinfo">제품 정보</string>
    <string name="title_drawer_personalinfo">개인정보 취급방침</string>
    <string name="title_drawer_useragreement">이용약관</string>

    // error message
    <string name="text_errorcode_battvolt">배터리 과전압 위헙</string>
    <string name="text_errorcode_batttemp">배터리 과열 위험</string>
    <string name="text_errorcode_chgcurr">배터리 과전류 위험</string>
    <string name="text_errorcode_motcurr">모터 과전류 위험</string>

    // ble dialog
    <string name="text_dialog_ble_title">블루투스 연결</string>
    <string name="text_dialog_ble_info">블루투스 연결 없이 앱을 사용할 수 있으나\n일부 기능이 제한됩니다.</string>
    <string name="button_dialog_ble_skip">연결하지 않고 사용</string>

    // err dialog
    <string name="text_dialog_err_title">오류발생</string>
    <string name="text_dialog_err_ble_notsupported">이 기기는 Bluetooth LE를 지원하지 않습니다.\n다른 기기를 이용해 주세요.</string>
    <string name="text_dialog_err_bluetooth_notsupported">이 기기는 Bluetooth를 지원하지 않습니다.\n다른 기기를 이용해 주세요.</string>
    <string name="text_dialog_err_bluetooth_notenabled">Bluetooth가 활성화 되지 않았습니다.\n해당 기능을 켜고 다시 시도해 주세요.</string>
    <string name="text_dialog_err_permission_notgranted">앱을 사용하는 데 필수적인 권한을 획득하지 못했습니다. 다시 시도해 주세요.</string>
    <string name="button_dialog_err_nobluetooth">무시</string>
    <string name="button_dialog_err_retry">재시도</string>
    <string name="button_dialog_err_exit">앱 종료</string>

    // diagnosis
    <string name="button_diagnosis_ambient">조도 센서 진단</string>
    <string name="text_diagnosis_ambient_info">센스봇 윗면에 있는 조도센서를 손으로 가린 후 떼는 동작을 해보세요. 아래 그림에서 동작 여부를 확인 할 수 있습니다.</string>
    <string name="button_diagnosis_cliff">절벽감지 센서 진단</string>
    <string name="text_diagnosis_cliff_info">센스봇 바닥에 있는 4개의 센서를 손으로 가린 후 떼는 동작을 해보세요. 아래 그림에서 동작 여부를 확인 할 수 있습니다.</string>

    // battery
    <string name="text_battery_connected">Connected</string>
    <string name="text_battery_disconnected">Disconnected</string>
    <string name="text_battery_connecting">Connecting..</string>
    <string name="text_battery_info_1">※ 배터리 전량은 기본적으로 물걸레 로봇청소기의 전원이 켜진 상태에서 블루투스 연결 후 확인할 수 있습니다.</string>
    <string name="text_battery_info_2">※ 핸디청소기를 연결하기 위해서는 물걸레 로봇청소기에 장착하여야 합니다.</string>
    <string name="text_battery_warning">⊙ 경고\n제품 충전은 반드시 제품의 전원을 끈 상태에서 해주세요.</string>

    // cs
    <string name="title_tab_cs_qna">FAQ</string>
    <string name="title_tab_cs_inquiry">문의하기</string>
    <string name="title_tab_cs_response">문의내역확인</string>
    <string name="title_tab_cs_cscenter">고객센터</string>

    // cs center
    <string name="text_cs_center_fine">파인로보틱스 고객센터</string>
    <string name="text_cs_center_phone">1577-1577</string>
    <string name="text_cs_center_info">A/S센터 위치 및 운영시간 안내</string>
    <string name="text_cs_center_title_address"> 주 소 </string>
    <string name="text_cs_center_title_workinghours">운영시간</string>
    <string name="text_cs_center_content_address">| 서울시 서울구 서울로 1호(서울동, 서울빌딩)</string>
    <string name="text_cs_center_content_workinghours">| 월요일~금요일 AM10:00~PM18:00\n (점심시간 PM12:00~PM13:00, 주말,공휴일 휴무)</string>

    // other
    <string name="text_other_sample_url">http://google.com</string>

</resources>