<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="onClick"
            type="android.view.View.OnClickListener"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/image_drawer_background"/>

        <ImageView
            android:id="@+id/iv_drawer_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:adjustViewBounds="true"
            android:src="@drawable/image_drawer_header"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/iv_drawer_header"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_drawer_category0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_drawer_login"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_drawer_login"
                        android:textSize="15sp"
                        android:onClick="@{onClick}"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_drawer_category1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/ll_drawer_category0"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_drawer_announcement"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_drawer_announcement"
                        android:textSize="15sp"
                        android:onClick="@{onClick}"/>

                    <TextView
                        android:id="@+id/tv_drawer_appversion"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_drawer_appversion"
                        android:textSize="15sp"
                        android:onClick="@{onClick}"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_drawer_category2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/ll_drawer_category1"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_drawer_usermanual"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_drawer_usermanual"
                        android:textSize="15sp"
                        android:onClick="@{onClick}"/>

                    <TextView
                        android:id="@+id/tv_drawer_website"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_drawer_website"
                        android:textSize="15sp"
                        android:onClick="@{onClick}"/>

                    <TextView
                        android:id="@+id/tv_drawer_productinfo"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_drawer_productinfo"
                        android:textSize="15sp"
                        android:onClick="@{onClick}"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_drawer_category3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/ll_drawer_category2"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_drawer_personalinfo"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_drawer_personalinfo"
                        android:textSize="15sp"
                        android:onClick="@{onClick}"/>

                    <TextView
                        android:id="@+id/tv_drawer_useragreement"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_drawer_useragreement"
                        android:textSize="15sp"
                        android:onClick="@{onClick}"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>