<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.noweaj.android.hybridcleanerandroid.viewmodel.DiagnosisCliffViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ededed">

        <LinearLayout
            android:id="@+id/ll_diagnosis_cliff_buttons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"
            app:layout_constraintHeight_percent=".075">

            <Button
                android:id="@+id/b_diagnosis_ambient_inactive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_diagnosis_deselected"
                android:text="@string/button_diagnosis_ambient"/>

            <Button
                android:id="@+id/b_diagnosis_cliff_active"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_diagnosis_selected"
                android:text="@string/button_diagnosis_cliff"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/ll_diagnosis_cliff_buttons"
            android:layout_margin="20dp"
            app:layout_constraintHeight_percent=".125"
            android:background="#FFFFFF">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:src="@drawable/image_diagnosis_cliff_info"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:text="@string/text_diagnosis_cliff_info"
                android:textSize="11sp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
