<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_dialog_err_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="15dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dialog_err_title"
                android:textColor="#FFFFFF"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_dialog_err_title"
            app:layout_constraintBottom_toTopOf="@id/ll_dialog_err_buttons">

            <TextView
                android:id="@+id/tv_dialog_err_cause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_dialog_err_info"
                android:textSize="12sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tv_dialog_err_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_dialog_err_cause"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ll_dialog_err_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_dialog_err_nobluetooth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_dialog_err_nobluetooth"
                    android:textSize="15sp"
                    android:textColor="#FFFFFF"
                    android:padding="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_dialog_err_retry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_dialog_err_retry"
                    android:textSize="15sp"
                    android:textColor="#FFFFFF"
                    android:padding="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_dialog_err_exit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_dialog_err_exit"
                    android:textSize="15sp"
                    android:textColor="#FFFFFF"
                    android:padding="10dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>